syntax = "proto3";
import "google/protobuf/empty.proto";

package chatPackage;

service ChatService {
    rpc ChatInit(InitRequest) returns (InitResponse) {};
    rpc SendMessage(MessageRequest) returns (google.protobuf.Empty) {};
    rpc UserStream(StreamRequest) returns (stream UserStreamResponse) {};
    rpc ChatStream(StreamRequest) returns (stream StreamMessage) {};
}

message InitRequest {
    string name = 1;
    string avatar = 2;
}

message InitResponse {
    int32 id = 1;
}

message MessageRequest {
    int32 id = 1;
    string message = 2; 
}

message StreamRequest {
    int32 id = 1;
}

enum Status {
    UNKNOWN = 0;
    ONLINE = 1;
    OFFLINE = 2;
}

message User {
    int32 id = 1;
    string name = 2; 
    string status = 3;
    string avatar = 4;
}

message UserStreamResponse {
    repeated User user = 1;
}

message StreamMessage {
    int32 id = 1;
    string message = 2;
} 